Added section my education

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -213,9 +213,9 @@
 					<h1>My education</h1>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2019-2020</h4>
 							<h6>
-								Master<br>Degree
+								Software<br>Developer
 							</h6>
 						</div>
 						<div class="education-info">
