Updated my education section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -219,9 +219,8 @@
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<h4>SoftUni</h4>
+							<p>Studying to become a Java Web Developer</p>
 						</div>
 					</div>
 					<div class="education-uni">
