Created my experience section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -210,7 +210,7 @@
 
 			<div class="experience">
 				<div class="education">
-					<h1>My education</h1>
+					<h1>My experience</h1>
 					<div class="education-uni">
 						<div class="education-year">
 							<h4>2019-2020</h4>
