Updated the education section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -93,21 +93,20 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section class="skills">
 			<div class="education">
 				<h1>My education</h1>
 				<div class="education-uni">
 					<div class="education-year">
-						<h4>2014-2015</h4>
+						<h4>2019-2020</h4>
 						<h6>
-							Master<br>Degree
+							Software<br>Developer
 						</h6>
 					</div>
 					<div class="education-info">
-						<h4>COMPUTER UNIVERSITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-							Aenean commodo ligula eget dolor. Aenean massa..</p>
+						<h4>SoftUni</h4>
+						<p>Studying to become a Java Web Developer</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -173,7 +172,8 @@
 			<div class="certificates">
 				<h1>Certificates</h1>
 				<div class="certificates-container">
-					<div class="sertificate soft-uni" onclick="smoothScrow(repositories)">
+					<div class="sertificate soft-uni"
+						onclick="smoothScrow(repositories)">
 						<h5>
 							I'm currently working towards a certificate for Java Web
 							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>.
@@ -209,7 +209,7 @@
 
 
 			<div class="experience">
-				<div class="education">
+				<div class="my-experience">
 					<h1>My experience</h1>
 					<div class="education-uni">
 						<div class="education-year">
