Updated the Education section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -106,12 +106,13 @@
 					</div>
 					<div class="education-info">
 						<h4>SoftUni</h4>
-						<p>Studying to become a Java Web Developer</p>
+						<p>Studying to become a Java Web Developer with
+						a lot of practical tasks and projects (learning by doing).</p>
 					</div>
 				</div>
 				<div class="education-uni">
 					<div class="education-year">
-						<h4>2014-2015</h4>
+						<h4>2012-2015</h4>
 						<h6>
 							Master<br>Degree
 						</h6>
