Updated the education section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -106,8 +106,8 @@
 					</div>
 					<div class="education-info">
 						<h4>SoftUni</h4>
-						<p>Studying to become a Java Web Developer with
-						a lot of practical tasks and projects (learning by doing).</p>
+						<p>Studying to become a Java Web Developer with a lot of
+							practical tasks and projects (learning by doing).</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -118,22 +118,20 @@
 						</h6>
 					</div>
 					<div class="education-info">
-						<h4>COMPUTER UNIVERSITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-							Aenean commodo ligula eget dolor. Aenean massa..</p>
+						<h4>Technical Univercity of Sofia</h4>
+						<p>Masters degree in Computer science and Software engineering</p>
 					</div>
 				</div>
 				<div class="education-uni">
 					<div class="education-year">
-						<h4>2014-2015</h4>
+						<h4>2008-2012</h4>
 						<h6>
-							Master<br>Degree
+							Bachelor<br>Degree
 						</h6>
 					</div>
 					<div class="education-info">
-						<h4>COMPUTER UNIVERSITY</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-							Aenean commodo ligula eget dolor. Aenean massa..</p>
+						<h4>VSU "Lyuben Karavelov" Sofia</h4>
+						<p>Bachelor degree in civil engineering and architecture.</p>
 					</div>
 				</div>
 			</div>
