Small changes to services section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -76,14 +76,15 @@
 				<div class="service">
 					<i class="fa fa-cog"></i>
 					<h4>Why choose me</h4>
-					<p>Fast learning, diligent, I’m determined to contribute to the
-						company / project success doing whatever it takes!</p>
+					<p>Fast learning, diligent, self-led, I can finds key
+					 resources and reads on the latest tech trends and solutions to contribute to the
+						company / project success!</p>
 				</div>
 				<div class="service">
 					<i class="fa fa-laptop"></i>
 					<h4>What I do</h4>
 					<p>Strong Software Developing skills using Java, mixed with
-						good HTML5 and SQL understanding.</p>
+						good HTML5, SQL and Networking understanding.</p>
 				</div>
 				<div class="service">
 					<i class="far fa-thumbs-up"></i>
