--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -75,7 +75,7 @@
 			<div class="service-container">
 				<div class="service">
 					<i class="fa fa-cog"></i>
-					<h4>Why choose me</h4>
+					<h4>Choose me</h4>
 					<p>Fast learning, diligent, self-led, I can finds key
 					 resources and reads on the latest tech trends and solutions to contribute to the
 						company / project success!</p>
@@ -120,7 +120,7 @@
 					</div>
 					<div class="education-info">
 						<h4>Technical Univercity of Sofia</h4>
-						<p>Masters degree in Computer science and Software engineering</p>
+						<p>Masters degree in Computer science and Software engineering.</p>
 					</div>
 				</div>
 				<div class="education-uni">
