Impact auto webapp

--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -25,7 +25,7 @@
 
 		<div class="input-group">
 			<input type="text" class="form-control"
-				placeholder="Type something here">
+				placeholder="Search by Maker, Model, Description, Vin or Lot number">
 			<div class="input-group-btn">
 				<button class="search-button">
 					<i class="fas fa-search"></i>
