Impact auto canada

--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -31,26 +31,25 @@
 					<i class="fas fa-search"></i>
 				</button>
 			</div>
+			<form>
+				<select class="language">
+					<option value="eng">English</option>
+					<option value="rs">Russian</option>
+				</select>
+
+
+			</form>
 		</div>
-
-		<form>
-			<select class="language">
-				<option value="eng">English</option>
-				<option value="bg">Bulgarian</option>
-				<option value="rs">Russian</option>
-			</select>
-
-		</form>
 		<div class="signin">
-			<a href="signin.html">
-				<p>Sign in</p>
-			</a><img src="images/signin.jpg">
-		</div>
-		<div class="register">
-			<button >REGISTER NOW</button>
+			<div class="sign">
+				<a href="index.html">
+					<p>Sign in</p>
+				</a><img src="images/signin.jpg">
+			</div>
+			<button class="register">REGISTER NOW</button>
 		</div>
 	</header>
-
+	<section class="search-car"></section>
 </body>
 </html>
 
