Impact auto app

--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -49,7 +49,16 @@
 			<button class="register">REGISTER NOW</button>
 		</div>
 	</header>
-	<section class="search-car"></section>
+	<section class="search-car">
+		<h2>Sign-up to our newsletter</h2>
+		<form action="#" method="post">
+			<p class="field">
+				<span class="input"> <input type="text" name="email" /> <span
+					class="actions"></span>
+				</span> <input type="submit" class="button" value="Абонирай се" />
+			</p>
+		</form>
+	</section>
 </body>
 </html>
 
