--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -28,7 +28,7 @@
 				placeholder="Search by Maker, Model, Description, Vin or Lot number">
 			<div class="input-group-btn">
 				<button class="search-button">
-					<i class="fas fa-search"></i>
+<!-- 					<i class="fas fa-search"></i> -->
 				</button>
 			</div>
 			<form>
