Impact Auto App

--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -17,7 +17,7 @@
 </script>
 </head>
 <body>
-	<header>
+	<div class="header">
 		<div class="logo">
 			<a href="index.html"> <img src="images/logo.jpg">
 			</a>
@@ -46,16 +46,45 @@
 			</div>
 			<button class="register">REGISTER NOW</button>
 		</div>
-	</header>
+	</div>
 	<section class="search-car">
-		<h2>Sign-up to our newsletter</h2>
-		<form action="#" method="post">
-			<p class="field">
-				<span class="input"> <input type="text" name="email" /> <span
-					class="actions"></span>
-				</span> <input type="submit" class="button" value="Абонирай се" />
-			</p>
-		</form>
+		<header>
+			<h2>Over 170,500 used and repairable salvage vehicles at</h2>
+			<h2>Canada’s #1 auto auction marketplace</h2>
+		</header>
+		<div class="select">
+			<select class="select-car">
+				<option value="volvo">Maker</option>
+				<option value="saab">Saab</option>
+				<option value="opel">Opel</option>
+				<option value="audi">Audi</option>
+			</select> <select class="select-car">
+				<option value="volvo">Model</option>
+				<option value="saab">Astra</option>
+				<option value="opel">Insignia</option>
+				<option value="audi">Zafira</option>
+			</select>
+			<div class="select-year">
+				<select class="from-year">
+					<option value="volvo">2020</option>
+					<option value="saab">2019</option>
+					<option value="opel">2018</option>
+					<option value="audi">2017</option>
+				</select> <select class="to-year">
+					<option value="volvo">2020</option>
+					<option value="saab">2019</option>
+					<option value="opel">2018</option>
+					<option value="audi">2017</option>
+				</select>
+			</div>
+			<select class="select-location">
+				<option value="volvo">Location</option>
+				<option value="saab">Calgary</option>
+				<option value="opel">Birmingham</option>
+				<option value="audi">Fresno</option>
+			</select>
+			<button class="search-now">SEARCH NOW</button>
+		</div>
 	</section>
 </body>
 </html>
