--- a/18. IMPACT AUTO/WebContent/index.html
+++ b/18. IMPACT AUTO/WebContent/index.html
@@ -86,6 +86,113 @@
 			<button class="search-now">SEARCH NOW</button>
 		</div>
 	</section>
+	<section class="popular-cars">
+		<header>
+			<h2>Popular Vehicles Right Now</h2>
+		</header>
+		<ul class="wrapper">
+			<li class="popular-car button"><a class="link" href="index.html"></a>
+				<div class="inner-car bmw">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>BMW X6</h2></div>
+					<h1>109 900 $</h1>
+					<h5>69324 km</h5>
+					<h5>Toronto</h5>
+					<p>Published on 21.04</p>
+				</div></li>
+			<li class="popular-car button"><a class="link" href="index.html"></a>
+				<div class="inner-car maseratti">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Maserati <br>Levante</h2></div>
+					<h1>302 990 $</h1>
+					<h5>12945 km</h5>
+					<h5>Montreal</h5>
+					<p>Published on 26.04</p>
+				</div></li>
+			<li class="popular-car button"><a class="link" href="index.html"></a>
+				<div class="inner-car mercedess">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Mercedes-Benz <br>G 63 AMG</h2></div>
+					<h1>178 000 $</h1>
+					<h5>19324 km</h5>
+					<h5>Vancouver</h5>
+					<p>Published on 21.04</p>
+				</div></li>
+			<li class="popular-car button hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car bentley">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Bentley <br>Continental GT</h2></div>
+					<h1>326 000 $</h1>
+					<h5>3924 km</h5>
+					<h5>Calgary</h5>
+					<p>Published on 1.04</p>
+				</div></li>
+			<li class="popular-car button hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car mazda">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Mazda CX-3</h2></div>
+					<h1>43 000 $</h1>
+					<h5>17975 km</h5>
+					<h5>Victoria</h5>
+					<p>Published on 22.04</p>
+				</div></li>
+			<li class="popular-car button hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car hundai">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Hyundai Tucson</h2></div>
+					<h1>51 000 $</h1>
+					<h5>19324 km</h5>
+					<h5>Quebec</h5>
+					<p>Published on 21.04</p>
+				</div></li>
+			<li class="popular-car button hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car alfa">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Alfa Romeo<br> Stelvio</h2></div>
+					<h1>51 900 $</h1>
+					<h5>52000 km</h5>
+					<h5>Halifax</h5>
+					<p>Published on 11.04</p>
+				</div></li>
+			<li class="popular-car button hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car merc">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Mercedes<br> GLS63</h2></div>
+					<h1>129 220 $</h1>
+					<h5>42000 km</h5>
+					<h5>Windsor</h5>
+					<p>Published on 25.04</p>
+				</div></li>
+			<li class="popular-car button hide-second hide-third"><a class="link" href="index.html"></a>
+				<div class="inner-car jeep">
+					<img src="images/logo.png">
+				</div>
+				<div class="car-info">
+					<div><h2>Jeep<br> Cherokee</h2></div>
+					<h1>69 000 $</h1>
+					<h5>99324 km</h5>
+					<h5>Edmonton</h5>
+					<p>Published on 23.04</p>
+				</div></li>
+		</ul>
+
+	</section>
 </body>
 </html>
 
