Small changes on my CV

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -76,9 +76,9 @@
 				<div class="service">
 					<i class="fa fa-cog"></i>
 					<h4>Choose me</h4>
-					<p>Fast learning, diligent, self-led, I can finds key
-					 resources and reads on the latest tech trends and solutions to contribute to the
-						company / project success!</p>
+					<p>Fast learning, diligent, self-led, I can finds key resources
+						and reads on the latest tech trends and solutions to contribute to
+						the company / project success!</p>
 				</div>
 				<div class="service">
 					<i class="fa fa-laptop"></i>
@@ -100,7 +100,7 @@
 				<h1>My education</h1>
 				<div class="education-uni">
 					<div class="education-year">
-						<h4>2019-2020</h4>
+						<h4>2020-2021</h4>
 						<h6>
 							Software<br>Developer
 						</h6>
@@ -120,7 +120,8 @@
 					</div>
 					<div class="education-info">
 						<h4>Technical Univercity of Sofia</h4>
-						<p>Masters degree in Computer science and Software engineering.</p>
+						<p>Masters degree in Computer science and Software
+							engineering.</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -171,39 +172,71 @@
 
 			<div class="certificates">
 				<h1>Certificates</h1>
-				<div class="certificates-container">
-					<div class="sertificate soft-uni"
-						onclick="smoothScrow(repositories)">
+				<!-- 	<div class="certificates-container">
+					<div class="sertificate soft-uni">
 						<h5>
 							I'm currently working towards a certificate for Java Web
 							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>.
 							Please check my repositories.
 						</h5>
 					</div>
-				</div>
+				</div> -->
 				<div class="certificates-container">
 					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented<br> Programming in Java
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
 						</h6>
-						<p>Six-week online course, 5 week assignments, lots of
-							programming exercises and a final exam.</p>
+
 					</div>
-					<div class="sertificate" onclick="showElement('game-certificate')">
+					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
 						<h6>
-							Confirmation of Participation<br>(Project completed)
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
 						</h6>
-						<p>Workshop covering Version Control Systems, Software Design
-							Patterns, Java GUIs with a final project.</p>
+
 					</div>
-					<div class="sertificate">
+					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
-						<h6>My mission</h6>
-						<p>To deliver the next generation of information technology
-							services and solutions, exceeding all client expectations.</p>
+						<h6>
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
+						</h6>
+
 					</div>
+					<div class="sertificate" onclick="showElement('oop-certificate')">
+						<img src="images/certificate.png">
+						<h6>
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
+						</h6>
+
+					</div>
+					<div class="sertificate" onclick="showElement('oop-certificate')">
+						<img src="images/certificate.png">
+						<h6>
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
+						</h6>
+
+					</div>
+					<div class="sertificate" onclick="showElement('oop-certificate')">
+						<img src="images/certificate.png">
+						<h6>
+							Object-Oriented Programming in Java
+							<p>Six-week online course, 5 week assignments, lots of
+								programming exercises and a final exam.</p>
+						</h6>
+
+					</div>
+		
 				</div>
 			</div>
 
