--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<header id="header">
-		<img src="images/pic2.jpg" alt="" class="img-responsive">
+		<img src="images/Me.jpg" alt="" class="img-responsive">
 		<h1>Tsvyatko Kirilov</h1>
 		<p>PROGRAMMER / JAVA DEVELOPER</p>
 	</header>
