Updated My Skills section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -83,8 +83,7 @@
 				<div class="service">
 					<i class="fa fa-laptop"></i>
 					<h4>What I do</h4>
-					<p>Strong Software Developing skills using Java, mixed with
-						good HTML5, SQL and Networking understanding.</p>
+					<p>Strong Java development skills mixed with good HTML5 and SQL understanding.</p>
 				</div>
 				<div class="service">
 					<i class="far fa-thumbs-up"></i>
