Updating My education

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -83,7 +83,8 @@
 				<div class="service">
 					<i class="fa fa-laptop"></i>
 					<h4>What I do</h4>
-					<p>Strong Java development skills mixed with good HTML5 and SQL understanding.</p>
+					<p>Strong Java development skills mixed with good HTML5 and SQL
+						understanding.</p>
 				</div>
 				<div class="service">
 					<i class="far fa-thumbs-up"></i>
@@ -121,6 +122,19 @@
 						<h4>Technical Univercity of Sofia</h4>
 						<p>Masters degree in Computer science and Software
 							engineering.</p>
+					</div>
+
+				</div>
+				<div class="education-uni">
+					<div class="education-year">
+						<h4>2008-2012</h4>
+						<h6>
+							Bachelor<br>Degree
+						</h6>
+					</div>
+					<div class="education-info">
+						<h4>VSU "Lyuben Karavelov" Sofia</h4>
+						<p>Bachelor degree in civil engineering and architecture.</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -171,15 +185,6 @@
 
 			<div class="certificates">
 				<h1>Certificates</h1>
-				<!-- 	<div class="certificates-container">
-					<div class="sertificate soft-uni">
-						<h5>
-							I'm currently working towards a certificate for Java Web
-							Developer from <a href="https://softuni.bg/" target="_blank">SoftUni</a>.
-							Please check my repositories.
-						</h5>
-					</div>
-				</div> -->
 				<div class="certificates-container">
 					<div class="sertificate" onclick="showElement('oop-certificate')">
 						<img src="images/certificate.png">
@@ -235,7 +240,7 @@
 						</h6>
 
 					</div>
-		
+
 				</div>
 			</div>
 
@@ -253,6 +258,19 @@
 						<div class="education-info">
 							<h4>SoftUni</h4>
 							<p>Studying to become a Java Web Developer</p>
+						</div>
+					</div>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
 						</div>
 					</div>
 					<div class="education-uni">
