--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -108,7 +108,7 @@
 					<div class="education-info">
 						<h4>SoftUni</h4>
 						<p>Studying to become a Java Web Developer with a lot of
-							practical tasks and projects (learning by doing).</p>
+							practical tasks and projects. <a href = "https://github.com/Cvqtko?tab=repositories" target="_blank">Check out my GitHub profile</a>.</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -139,14 +139,14 @@
 				</div>
 				<div class="education-uni">
 					<div class="education-year">
-						<h4>2008-2012</h4>
+						<h4>2003-2008</h4>
 						<h6>
-							Bachelor<br>Degree
+							High<br>School
 						</h6>
 					</div>
 					<div class="education-info">
-						<h4>VSU "Lyuben Karavelov" Sofia</h4>
-						<p>Bachelor degree in civil engineering and architecture.</p>
+						<h4>High School "Hristo Botev" Dupnica</h4>
+						<p>Studying Math, Information Technologies and English.</p>
 					</div>
 				</div>
 			</div>
