Updated My Skills section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -107,8 +107,12 @@
 					</div>
 					<div class="education-info">
 						<h4>SoftUni</h4>
-						<p>Studying to become a Java Web Developer with a lot of
-							practical tasks and projects. <a href = "https://github.com/Cvqtko?tab=repositories" target="_blank">Check out my GitHub profile</a>.</p>
+						<p>
+							Studying to become a Java Web Developer with a lot of practical
+							tasks and projects. <a
+								href="https://github.com/Cvqtko?tab=repositories"
+								target="_blank">Check out my GitHub profile</a>.
+						</p>
 					</div>
 				</div>
 				<div class="education-uni">
@@ -165,10 +169,12 @@
 							class="my-sql" id="my-sql"></span></span></li>
 					<li><h3>JavaScript</h3> <span class="bar"><span
 							class="javascript" id="javascript"></span></span></li>
-					<li><h3>JUnit & Mockito</h3> <span class="bar"><span
-							class="junit" id="junit"></span></span></li>
+					<li><h3>Data Structures and Algorithms</h3> <span class="bar"><span
+							class="alg" id="alg"></span></span></li>
 					<li><h3>Design Patterns</h3> <span class="bar"><span
 							class="design-patterns" id="design-patterns"></span></span></li>
+					<li><h3>Hibernate</h3> <span class="bar"><span
+							class="hibernate" id="hibernate"></span></span></li>
 				</ul>
 			</div>
 		</section>
