--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -370,7 +370,7 @@
 		</div>
 		<p class="copyright">
 			© 2021 Tsvyatko Kirilov Resume. All Rights Reserved.<a class="git"
-				href="https://github.com/Cvqtko">GitHub</a>
+				href="https://github.com/Cvqtko" target="_blank">GitHub</a>
 		</p>
 
 	</footer>
