Adding certificates section

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -150,7 +150,8 @@
 					</div>
 					<div class="education-info">
 						<h4>High School "Hristo Botev" Dupnica</h4>
-						<p>Studying Math, Information Technologies and English.</p>
+						<p>Studying in-depth Math, Information Technologies and
+							English.</p>
 					</div>
 				</div>
 			</div>
@@ -179,70 +180,87 @@
 			</div>
 		</section>
 		<section class="skills">
-			<div id="oop-certificate" class="certificate"
-				onclick="hideElement('oop-certificate')">
-				<embed src="images/java_OOP_RecordOfAchievement.pdf" />
+			<div id="intro-to-sql" class="certificate"
+				onclick="hideElement('intro-to-sql')">
+				<embed src="images/Coursera ZK9MRXQG8T72.pdf" />
 			</div>
-			<div id="game-certificate" class="certificate"
-				onclick="hideElement('game-certificate')">
-				<embed src="images/java_Game_RecordOfAchievement.pdf" />
+			<div id="java-oop" class="certificate"
+				onclick="hideElement('java-oop')">
+				<embed src="images/Coursera PHSUYWK2N862.pdf" />
+			</div>
+			<div id="html5" class="certificate" onclick="hideElement('html5')">
+				<embed src="images/Coursera P7SSPXPNGWNH.pdf" />
+			</div>
+			<div id="operating-systems" class="certificate"
+				onclick="hideElement('operating-systems')">
+				<embed src="images/Coursera A5JJNRS48KK6.pdf" />
+			</div>
+			<div id="networking" class="certificate"
+				onclick="hideElement('networking')">
+				<embed src="images/Coursera MV35NLJE8TJS.pdf" />
+			</div>
+			<div id="technical-support" class="certificate"
+				onclick="hideElement('technical-support')">
+				<embed src="images/Coursera YNWG4WRR5ATT.pdf" />
 			</div>
 
 
 			<div class="certificates">
 				<h1>Certificates</h1>
 				<div class="certificates-container">
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('intro-to-sql')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							Introduction to SQL - University of Michigan
+							<p>Learning basic syntax of the SQL language as well as
+								database design with multiple tables, joins, transactions and
+								stored procedures.</p>
 						</h6>
 
 					</div>
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('java-oop')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							Object Oriented Programming in Java - UC San Diego
+							<p>Learning Object Oriented Java programming, Data
+								Structures, Algorithms and beyond.</p>
 						</h6>
 
 					</div>
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('html5')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							HTML, CSS, and JavaScript - Johns Hopkins University
+							<p>Learning the fundamentals of HTML5, CSS3 and JavaScript.</p>
 						</h6>
 
 					</div>
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('operating-systems')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							OS and You: Becoming a Power User - Google
+							<p>Learn the main components of an operating system and how
+								to perform critical tasks like managing software and users, and
+								configuring hardware.</p>
 						</h6>
 
 					</div>
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('networking')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							The Bits and Bytes of Computer Networking - Google
+							<p>Learning everything from the fundamentals of modern
+								networking technologies and protocols to an overview of the
+								cloud to practical applications and network troubleshooting.</p>
 						</h6>
 
 					</div>
-					<div class="sertificate" onclick="showElement('oop-certificate')">
+					<div class="sertificate" onclick="showElement('technical-support')">
 						<img src="images/certificate.png">
 						<h6>
-							Object-Oriented Programming in Java
-							<p>Six-week online course, 5 week assignments, lots of
-								programming exercises and a final exam.</p>
+							Technical Support Fundamentals - Google
+							<p>Learning about the different facets of Information Technology,
+							 like computer hardware, the Internet, computer software, troubleshooting, and customer service.</p>
 						</h6>
 
 					</div>
