Fixing hibernate link

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -335,7 +335,7 @@
 					href="https://github.com/Cvqtko?tab=repositories"></a></li>
 				<li class="java-ee whiten button"><a class="link"
 					href="https://github.com/Cvqtko?tab=repositories"></a></li>
-				<li class="hibernate button"><a class="link"
+				<li class="hibernate-repo button"><a class="link"
 					href="https://github.com/Cvqtko?tab=repositories"></a></li>
 				<li class="footer-my-sql button"><a class="link"
 					href="https://github.com/Cvqtko?tab=repositories"></a></li>
