--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -323,6 +323,32 @@
 								Aenean commodo ligula eget dolor. Aenean massa..</p>
 						</div>
 					</div>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
+						</div>
+					</div>
+					<div class="education-uni">
+						<div class="education-year">
+							<h4>2014-2015</h4>
+							<h6>
+								Master<br>Degree
+							</h6>
+						</div>
+						<div class="education-info">
+							<h4>COMPUTER UNIVERSITY</h4>
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+								Aenean commodo ligula eget dolor. Aenean massa..</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
