--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -274,79 +274,76 @@
 					<h1>My experience</h1>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2019-2020</h4>
+							<h4>2020-2021</h4>
 							<h6>
 								Software<br>Developer
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>SoftUni</h4>
-							<p>Studying to become a Java Web Developer</p>
+							<h4>Freelancer</h4>
+							<p>Making HTML & Photoshop mokups for various companies. Developing my skills as a 
+							software developer by taking various courses from SoftUni and Coursera.</p>
 						</div>
 					</div>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2018-2020</h4>
 							<h6>
-								Master<br>Degree
+								Car<br>Dealer
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<h4>Self Employed</h4>
+							<p>Fixing, cleaning, repainting used cars and reselling them.</p>
 						</div>
 					</div>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2017-2018</h4>
 							<h6>
-								Master<br>Degree
+								Visteon <br>Bulgaria
 							</h6>
 						</div>
 						<div class="education-info">
 							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<p>Planning, preparation, execution and analization of tests for automotive electronics.</p>
 						</div>
 					</div>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2016-2017</h4>
 							<h6>
-								Master<br>Degree
+								Civil<br>Engineer
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<h4>Pepeterio S.L, Pilar, Spain</h4>
+							<p>Constructing wooden houses and pergolas.</p>
 						</div>
 					</div>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2015-2015</h4>
 							<h6>
-								Master<br>Degree
+								Junior Java<br>Developer
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<h4>Oryx Bulgaria</h4>
+							<p>Preparing for Hybris exam and certification.
+							Working on a Home Automation project.</p>
 						</div>
 					</div>
 					<div class="education-uni">
 						<div class="education-year">
-							<h4>2014-2015</h4>
+							<h4>2015-2015</h4>
 							<h6>
-								Master<br>Degree
+								Java EE<br>Trainee
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-								Aenean commodo ligula eget dolor. Aenean massa..</p>
+							<h4>ITTALLENTS training camp</h4>
+							<p>Completed an overall course on Java and Java EE technologies.</p>
 						</div>
 					</div>
 				</div>
