Changed education info

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -305,7 +305,7 @@
 							</h6>
 						</div>
 						<div class="education-info">
-							<h4>COMPUTER UNIVERSITY</h4>
+							<h4>Software Test Engineer</h4>
 							<p>Planning, preparation, execution and analization of tests for automotive electronics.</p>
 						</div>
 					</div>
