--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -355,23 +355,22 @@
 			<p class="subheading">Check out my work</p>
 			<ul class="wrapper">
 				<li class="spring-mvc button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="java-ee whiten button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="hibernate-repo button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="footer-my-sql button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="java-oop button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="html-css button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="footer-design-patterns button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
 				<li class="java-advanced button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
-				<li class="game button"><a class="link"
-					href="https://github.com/Cvqtko?tab=repositories"></a></li>
+					href="https://github.com/Cvqtko?tab=repositories" target="_blank"></a></li>
+				<li class="game button"><a class="link" href="https://www.w3schools.com" target="_blank"></a></li>
 			</ul>
 		</section>
 	</main>
