Updated Design Patterns link

--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -373,7 +373,7 @@
 					href="https://github.com/Cvqtko/HTML-CSS" target="_blank"></a></li>
 					
 				<li class="design-patterns-repo button"><a class="link"
-					href="https://github.com/Cvqtko/Design-Patterns" target="_blank"></a></li>
+					href="https://github.com/Cvqtko/Design-Patterns/tree/master/Design%20Patterns/src" target="_blank"></a></li>
 					
 				<li class="java-fundamentals-repo button"><a class="link"
 					href="https://github.com/Cvqtko/Java-Advanced" target="_blank"></a></li>
