--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -282,7 +282,7 @@
 						</div>
 						<div class="education-info">
 							<h4>Freelancer</h4>
-							<p>Wirking on start-ups, car sales platform and other development initiatives.</p>
+							<p>Working on start-ups, car sales platform and other development initiatives.</p>
 						</div>
 					</div>
 					<div class="education-uni">
