--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -294,7 +294,7 @@
 						</div>
 						<div class="education-info">
 							<h4>Software Test Engineer</h4>
-							<p>Planning, preparation, execution and analization of tests
+							<p>Planning, preparation, execution and test analysis 
 								for automotive electronics.</p>
 						</div>
 					</div>
