--- a/17. My CV/WebContent/index.html
+++ b/17. My CV/WebContent/index.html
@@ -50,8 +50,8 @@
 						<p>Tsvyatko Kirilov</p>
 					</div>
 					<div class="align-right-info">
-						<h4>Sex</h4>
-						<p>Male</p>
+						<h4>Telephone </h4>
+						<p>(+359) 879 89 29 14</p>
 					</div>
 					<div class="align-right-info">
 						<h4>Address</h4>
